--- a/assign/styles/firststl.css
+++ b/assign/styles/firststl.css
@@ -1,17 +1,33 @@
-
+body{
+    max-width: 1270px;
+}
 .inter {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
+  
 }
-body{
+.inter{
     background-image: url(../Assets/Hero-bg.png);
+    max-width: 1144px;
+    max-height: 698px;
 }
 nav{
     
     width: 100%;
     height: 100%;
+}
+.boxi{
+    font-family: "Raleway", sans-serif;
+    font-size: 40px;
+    text-align: center;
+    margin-top: 209px;
+
+    font-weight: bold;
+    font-style: normal;
+    margin-left: 267px;
+    margin-right: 267px;
 }
 .button1{
       position: absolute;
@@ -19,7 +35,7 @@ nav{
       right: 150px;
       padding: 10px 20px;
       background-color: #4E47FF;
-      color: white;
+      color: #FFFFFF;
       border: none;
       border-radius: 5px;
 }
@@ -29,4 +45,13 @@ nav{
     font-size: 34px;
     font-weight: bolder;
     
+}
+.button2{
+    background-color: #4E47FF;
+    border: none;
+    border-radius: 5px;
+    color: #FFFFFF;   
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 20px;
 }
