--- a/assign/styles/firststl.css
+++ b/assign/styles/firststl.css
@@ -1,23 +1,19 @@
+
 body{
-    max-width: 1270px;
+    max-width: 1400;
 }
-.inter {
-  font-family: "Inter", sans-serif;
+.inter{ font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
   
 }
-.inter{
-    background-image: url(../Assets/Hero-bg.png);
-    max-width: 1144px;
-    max-height: 698px;
+.navbar1{
+    background-image: url('/assign/Assets/Hero-bg.png');
+    background-repeat: no-repeat;
+    overflow: auto;
 }
-nav{
-    
-    width: 100%;
-    height: 100%;
-}
+
 .boxi{
     font-family: "Raleway", sans-serif;
     font-size: 40px;
