--- a/assign/styles/firststl.css
+++ b/assign/styles/firststl.css
@@ -12,18 +12,21 @@ body{
     background-image: url('/assign/Assets/Hero-bg.png');
     background-repeat: no-repeat;
     overflow: auto;
+    max-height: 698px;
+    max-width: 1440px;
 }
 
 .boxi{
     font-family: "Raleway", sans-serif;
     font-size: 40px;
     text-align: center;
-    margin-top: 209px;
+    margin-top: 150px;
 
     font-weight: bold;
     font-style: normal;
     margin-left: 267px;
     margin-right: 267px;
+    margin-bottom: 150px;
 }
 .button1{
       position: absolute;
@@ -50,4 +53,5 @@ body{
     font-size: 16px;
     font-weight: bold;
     padding: 10px 20px;
+    position: relative;
 }
