--- a/assign/styles/firststl.css
+++ b/assign/styles/firststl.css
@@ -1,6 +1,7 @@
 
 body{
     max-width: 1400px;
+    background-color: #f0eff8;
 }
 .inter{ font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -123,6 +124,7 @@ body{
   padding: 60px 20px;
   text-align: center;
   margin-top: 300px;
+  margin-bottom: 0px;
 }
 
 .testimonials h2 {
@@ -136,6 +138,7 @@ body{
   justify-content: center;
   gap: 20px;
   flex-wrap: wrap;
+  margin-top: auto;
 }
 
 .testimonial-card {
@@ -196,8 +199,33 @@ body{
 }
 .focus-image{
    padding-top: 15px;
-   padding-bottom: 40px;
-  
-   
-   
+   padding-bottom: 40px;  
+}
+.contact{
+    display: flex;
+    max-width: 1134px;
+    max-height: 640px;
+}
+.input{
+    margin-top: 100px;
+    position: relative;
+    margin-left: 300px;
+    
+}
+.lets{
+    margin-left: 150px;
+    margin-top: 100px;
+}
+.inputs{
+    width: 300px;
+    height: 70px;
+    border-style: none;
+    border-radius: 5px;
+}
+.h5ws{
+    font-size: 18px;
+    font-weight: 400px;
+}
+::placeholder{
+    color: #8d8b8b;
 }
