--- a/assign/styles/firststl.css
+++ b/assign/styles/firststl.css
@@ -2,6 +2,7 @@
 body{
     max-width: 1400px;
     background-color: #f0eff8;
+    margin: 0px;
 }
 .inter{ font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
@@ -30,7 +31,7 @@ body{
     margin-bottom: 150px;
 }
 .button1{
-      position: absolute;
+      position:absolute;
       top: 50px;
       right: 150px;
       padding: 10px 20px;
@@ -228,4 +229,21 @@ body{
 }
 ::placeholder{
     color: #8d8b8b;
+}
+.logos{
+    max-width: 100%;
+    
+    text-align: center;
+}
+.logo{
+    margin-top: 100px;
+    font-size: 100px;
+    font-weight: bold;
+    color: #4E47FF;
+}
+.btn4{
+    margin: 40px;
+    border-style: none;
+    background-color: white;
+    color: #666;
 }
